--- a/server/package.json
+++ b/server/package.json
@@ -49,6 +49,7 @@
     "typedi": "0.8.0",
     "typescript": "3.8.3",
     "winston": "3.2.1",
+    "simple-git": "^1.120.0",
     "boldrei-client": "file:../client"
   },
   "devDependencies": {
