--- a/server/package.json
+++ b/server/package.json
@@ -27,30 +27,31 @@
   "dependencies": {
     "apollo-boost": "0.4.4",
     "apollo-server-express": "2.9.0",
+    "boldrei-client": "file:../client",
     "chalk": "3.0.0",
     "cors": "2.8.5",
     "cron": "1.8.2",
     "datason": "1.0.5",
     "dateformat": "3.0.3",
+    "deep-object-diff": "^1.1.0",
     "express": "4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.2.1",
     "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "4.0.5",
-    "node-fetch": "2.6.0",
-    "node-upnp": "^1.2.0",
     "lodash": "^2.4.1",
+    "node-fetch": "2.6.0",
     "node-ssdp-lite": "^0.2.0",
-    "request": "^2.53.0",
-    "xml2js": "^0.4.5",
+    "node-upnp": "^1.2.0",
     "reflect-metadata": "0.1.13",
+    "request": "^2.53.0",
+    "simple-git": "^1.120.0",
     "subscriptions-transport-ws": "^0.9.16",
     "type-graphql": "0.17.6",
     "typedi": "0.8.0",
     "typescript": "3.8.3",
     "winston": "3.2.1",
-    "simple-git": "^1.120.0",
-    "boldrei-client": "file:../client"
+    "xml2js": "^0.4.5"
   },
   "devDependencies": {
     "@types/compression": "^1.7.0",
