--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "typeRoots": ["node_modules/@types", "src/@types"],
+    "typeRoots": ["node_modules/@types"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "module": "commonjs",
@@ -14,7 +14,7 @@
     "baseUrl": ".",
     "paths": { "": ["node_modules/"] }
   },
-  "files": ["src/@types/graphql.d.ts"],
+  // "files": ["src/@types/graphql.d.ts"],
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
